Update development/about page

--- a/template.html
+++ b/template.html
@@ -10,8 +10,8 @@
 <div class="container">
 <h1><a href="/"><img src='/img/header.png' alt="Angband"></a></h1>
 <ul id="nav">
-<li <@helptab@>><a href="/help">Help & Manual</a>
-<li <@developtab@>><a href="/develop">About</a>
+<li <@helptab@>><a href="/help">Help &amp; Manual</a>
+<li <@abouttab@>><a href="/develop">About</a>
 <li <@releasetab@>><a href="/release">Download</a>
 </ul>
 </div>
