Make the 'other releases' bit on the release page prettier

--- a/release_template.html
+++ b/release_template.html
@@ -1,6 +1,10 @@
-<div id="releasesnav" class="highlight_box">Other releases:
-<ul><@release_list@></ul></div>
 <h2>Angband Releases: <@release_name@></h2>
+
+<div id="releasesnav" class="highlight_box">
+<h3>Other releases:</h3>
+<ul><@release_list@></ul>
+</div>
+
 <div class='page'>
 <@content@>
 </div>
